# teeworlds-infclassR

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  ChangeLog.txt  README.md  autoexec.cfg  bam.lua  disable-humans.cfg  disable-infected.cfg  reset.cfg
.github/workflows/: build-scripts.yaml  build.yaml  ci.conf
cmake/: FindMaxMindDB.cmake  FindPNG.cmake  conan.cmake
cmake/conan-modules/: FindPNG.cmake
data/languages/: ar.json  bg.json  cs.json  de.json  el.json  es.json  fa.json  fi.json  fr.json  hr.json  hu.json  index.json  it.json  ja.json  la.json  nl.json  pl.json  pt-BR.json  pt.json  ru.json  sah.json  sr-Latn.json  tl.json  tr.json  uk.json  zh-CN.json  zh-Hans.json
data/maps/: infc_bamboo2.cfg  infc_bamboo2.map  infc_bamboo3.map  infc_canyon.map  infc_damascus.map  infc_floatingislands.map  infc_half_provence.cfg  infc_half_provence.map  infc_hardcorepit.cfg  infc_headquarter.map  infc_k9f_small.cfg  infc_k9f_small.map  infc_malinalli_k9f.cfg  infc_provence.cfg  infc_provence.map  infc_sewers.map  infc_skull_mini.cfg  infc_skull_mini.map  infc_skull_winter.map  infc_spacelab.map  infc_towers.cfg  infc_warehouse.map  infc_warehouse2.cfg  infc_warehouse2.map  infc_warehouse_mini.cfg  infc_warehouse_mini.map  infc_warehouse_winter.map  infc_wonderlands_mini.cfg  infc_wonderlands_mini.map  skip.cfg  skip.map
datasrc/: compile.py  content.py  datatypes.py  network.py
other/po/: infclass.pot
other/po/ar/: infclass.po
other/po/bg/: infclass.po
other/po/cs/: infclass.po
other/po/de/: infclass.po
other/po/el/: infclass.po
other/po/es/: infclass.po
other/po/fa/: infclass.po
other/po/fi/: infclass.po
other/po/fr/: infclass.po
other/po/hr/: infclass.po
other/po/hu/: infclass.po
other/po/it/: infclass.po
other/po/ja/: infclass.po
other/po/la/: infclass.po
other/po/nl/: infclass.po
other/po/pl/: infclass.po
other/po/pt/: infclass.po
other/po/pt-BR/: infclass.po
other/po/ru/: infclass.po
other/po/sq/: infclass.po
other/po/sr-CS/: infclass.po
other/po/tl/: infclass.po
other/po/tr/: infclass.po
other/po/uk/: infclass.po
other/po/zh-CN/: infclass.po
other/po/zh-TW/: infclass.po
scripts/: git_revision.py  translation-python3.py
src/base/: log.cpp  logger.h  math.cpp  math.h  system.c  system.cpp  system.h  vmath.h
src/base/tl/: array.h  array_on_stack.h  ic_array.h  ic_enum.h  ic_fifo.h
src/engine/: config.h  console.h  demo.h  engine.h  graphics.h  http.h  kernel.h  map.h  masterserver.h  message.h  server.h  storage.h
src/engine/server/: http.cpp  mapconverter.cpp  mapconverter.h  measure_ticks.cpp  measure_ticks.h  netsession.h  register.cpp  register.h  roundstatistics.cpp  roundstatistics.h  server.cpp  server.h  sql_server.h
src/engine/server/databases/: connection.cpp  connection_pool.cpp
src/engine/shared/: config.cpp  config.h  config_variables.h  console.cpp  console.h  datafile.cpp  datafile.h  demo.cpp  demo.h  econ.cpp  econ.h  engine.cpp  fixed_point_number.cpp  fixed_point_number.h  jobs.cpp  map.cpp  map.h  mapchecker.cpp  masterserver.cpp  memheap.cpp  netban.cpp  netban.h  netdatabase.cpp  netdatabase.h  network.cpp  network.h  network_client.cpp  network_conn.cpp  network_console.cpp  network_server.cpp  packer.cpp  protocol.h  protocol_ex.cpp  protocol_ex.h  protocol_ex_msgs.h  snapshot.cpp  snapshot.h  storage.cpp  teehistorian_ex_chunks.h  uuid_manager.cpp  (+1 more)
src/game/: animation.cpp  collision.cpp  collision.h  gamecore.cpp  gamecore.h  layers.cpp  layers.h  mapitems.h  teamscore.cpp  teamscore.h  tuning.h  variables.h  version.h  version.h.in
src/game/infclass/: classes.cpp  classes.h  damage_type.cpp  weapons.h
src/game/server/: changelog.cpp  classes.h  ddracecommands.cpp  entity.cpp  entity.h  eventhandler.cpp  eventhandler.h  gamecontext.cpp  gamecontext.h  gamecontroller.cpp  gamecontroller.h  gameworld.cpp  gameworld.h  main_server.cpp  player.cpp  player.h  skininfo.h  snap_context.h  teams.cpp  teams.h  teeinfo.cpp  teeinfo.h
src/game/server/entities/: biologist-laser.cpp  biologist-mine.cpp  bouncing-bullet.cpp  character.cpp  character.h  engineer-wall.cpp  engineer-wall.h  entity-timer.cpp  entity-timer.h  flyingpoint.cpp  flyingpoint.h  growingexplosion.cpp  growingexplosion.h  hero-flag.cpp  hero-flag.h  laser.cpp  laser.h  looper-wall.cpp  merc-bomb.cpp  merc-bomb.h  plasma.cpp  plasma.h  portal.cpp  portal.h  projectile.cpp  projectile.h  scatter-grenade.cpp  scientist-laser.cpp  scientist-laser.h  scientist-mine.cpp  slug-slime.cpp  slug-slime.h  soldier-bomb.cpp  soldier-bomb.h  turret.cpp  turret.h  white-hole.cpp
src/game/server/gamemodes/: mod.cpp  mod.h
src/game/server/infclass/: damage_context.h  damage_type.h  death_context.h  events-director.cpp  events-director.h  infc_config_variables.h  infcgamecontroller.cpp  infcgamecontroller.h  infcplayer.cpp  infcplayer.h
src/game/server/infclass/classes/: infcplayerclass.cpp  infcplayerclass.h
src/game/server/infclass/entities/: biologist-laser.cpp  biologist-laser.h  biologist-mine.cpp  biologist-mine.h  blinding-laser.cpp  blinding-laser.h  bouncing-bullet.cpp  bouncing-bullet.h  chaining-laser.cpp  chaining-laser.h  electrician-laser.cpp  electrician-laser.h  engineer-wall.cpp  engineer-wall.h  fking-CK.cpp  fking-CK.h  fking-power.cpp  fking-power.h  flyingpoint.cpp  flyingpoint.h  growingexplosion.cpp  growingexplosion.h  hero-flag.cpp  hero-flag.h  ic-pickup.cpp  ic-pickup.h  infc-laser.cpp  infc-laser.h  infc-placed-object.cpp  infc-placed-object.h  infccharacter.cpp  infccharacter.h  infcentity.cpp  infcentity.h  laser-teleport.cpp  laser-teleport.h  (+34 more)
src/infclassr/: geolocation.cpp  geolocation.h
src/mastersrv/: mastersrv.cpp
src/teeuniverses/components/: localization.cpp  localization.h
src/teeuniverses/system/: string.h
src/tests/: test_icArray.cpp  test_icFifoArray.cpp
src/tools/: crapnet.cpp  dilate.cpp  fake_server.cpp  map_convert_for_client.cpp  map_resave.cpp  packetgen.cpp  tileset_borderadd.cpp  tileset_borderfix.cpp  tileset_borderrem.cpp  tileset_borderset.cpp
(+4 files in other folders)
